Refactoring theme for webpage

--- a/index.html
+++ b/index.html
@@ -115,10 +115,12 @@
         </header> <!-- end s-header -->
 
 
+        <!-- # site-content
+        ================================================== -->
+        <section id="content" class="s-content">
 
 
-
-        <!-- intro and download
+        <!-- intro
             ----------------------------------------------- -->
         <section id="intro" class="s-intro target-section">
 
@@ -371,7 +373,7 @@
     <div class="ss-go-top">
         <a class="smoothscroll" title="Back to Top" href="#top">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                style="fill: rgba(0, 0, 0, 1);transform: msFilter;">
+                style="fill: rgba(0, 0, 0, 1); transform: msFilter;">
                 <path d="M6 4h12v2H6zm5 10v6h2v-6h5l-6-6-6 6z"></path>
             </svg>
         </a>
@@ -383,6 +385,6 @@
     ================================================== -->
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-</body>
 
+</body>
 </html>
