--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
   </section> -->
 
         <section>
-            <div class="Footer" alt="Responsive">
+            <div class="container-fluid" alt="Responsive-image">
                 <div class="strain"></div>
                 <div class="strain"></div>
                 <div class="strain"></div>
