updated favicon and removed previous

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-                            <img src="images/logo.svg" alt="Homepage">
+                            <img src="favicon.ico" alt="Homepage">
                         </a>
                     </div>
 
